# SkylineExperiment

OPPRS/: .gitignore  CMakeLists.txt  auto-exp.py  for.sh
OPPRS/dataset/: genDataset.py  skylineQuery.py
OPPRS/params/: she.json
OPPRS/src/: globcom.cc  globcom.h  main.cc  mine.cc  phe.h  utility.cc  utility.h
OPPRS/test/: CMakeLists.txt  she_test.cc
PPARS/: BFilter.cpp  BFilter.h  BloomFilter.cpp  BloomFilter.h  CMakeLists.txt  Data.cpp  Data.h  DataBases.cpp  DataBases.h  GenQueryToken.cpp  GenQueryToken.h  PPARSCacheMain_change_d_Thread_notok.cpp  PPARSCacheMain_change_d_ok.cpp  PPARSCacheMain_change_n_notok.cpp  PPARSCacheMain_change_n_ok.cpp  QToken.cpp  QToken.h  RSkylinePlain.cpp  RSkylinePlain.h  RangeEncoder.cpp  RangeEncoder.h  RangeEncoder_Thread.cpp  SHSParamters.cpp  SHSParamters.h  Server.cpp  Server.h  Server_Thread.cpp  Server_Thread.h  StrSet.cpp  StrSet.h  SymHomSch.cpp  SymHomSch.h  eye_state_n=2000_d=3.csv  eyestate_dataset.csv  house_dataset.csv  query-point.csv  results.txt  uscensus_dataset.csv
